--- a/css/z_custom.css
+++ b/css/z_custom.css
@@ -2,19 +2,25 @@
 	transform: scale(2);
 }
 .twitter-share-button {
-	transform: scale(1.9);
+	transform: scale(2);
 }
 .fb-marg {
-	margin-right: 20px;
+	margin-right: 50px;
 }
 .tw-marg {
-	margin-left: 20px;
+	margin-left: 50px;
 }
 @media (max-width: 479px) {
 	.fb-share-button {
 		transform: scale(1.5);
 	}
 	.twitter-share-button {
-		transform: scale(1.4);
+		transform: scale(1.5);
+	}
+	.fb-marg {
+		margin-right: 20px;
+	}
+	.tw-marg {
+		margin-left: 20px;
 	}
 }
