Fix responsive for FB button

--- a/css/z_custom.css
+++ b/css/z_custom.css
@@ -10,6 +10,9 @@
 .tw-marg {
 	margin-left: 50px;
 }
+.fb_iframe_widget_fluid {
+    display: block;
+}
 @media (max-width: 479px) {
 	.fb-share-button {
 		transform: scale(1.5);
