--- a/css/girls-who-code.webflow.css
+++ b/css/girls-who-code.webflow.css
@@ -30,7 +30,7 @@
 }
 
 .h1-header {
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #6eceb2;
   font-size: 68px;
   line-height: 76px;
@@ -55,14 +55,14 @@
 }
 
 .h2-txt {
-  font-family: brandon-grotesque, sans-serif;
+  font-family: Source Sans Pro, sans-serif;
   color: #01426a;
   font-size: 28px;
   font-weight: 400;
 }
 
 .h2-txt.h2-center {
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 32px;
   text-align: center;
 }
@@ -102,7 +102,7 @@
 }
 
 .h3-txt {
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #f4364c;
   font-weight: 400;
   text-align: center;
@@ -134,7 +134,7 @@
   margin-right: auto;
   margin-bottom: 10px;
   margin-left: auto;
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #f4364c;
   font-size: 20px;
 }
@@ -196,7 +196,7 @@
 }
 
 .field-label {
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #000;
   font-weight: 700;
 }
@@ -225,7 +225,7 @@
   background-color: #f4364c;
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 18px;
   text-align: center;
   letter-spacing: 1px;
@@ -239,7 +239,7 @@
   width: 240px;
   padding: 10px 15px;
   border-radius: 0px;
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
 }
 
@@ -297,7 +297,7 @@
 .fb-share-txt {
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: brandon-grotesque, sans-serif;
+  font-family: Source Sans Pro, sans-serif;
   color: #fff;
   font-size: 15px;
   font-weight: 300;
@@ -335,7 +335,7 @@
 .tw-share-txt {
   padding-top: 10px;
   padding-bottom: 10px;
-  font-family: brandon-grotesque, sans-serif;
+  font-family: Source Sans Pro, sans-serif;
   color: #fff;
   font-size: 15px;
   font-weight: 300;
@@ -401,7 +401,7 @@
 .thanks-banner-p-txt {
   margin-top: 27px;
   margin-bottom: 27px;
-  font-family: 'Merlo bold', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #fff;
   font-size: 20px;
   text-align: center;
@@ -527,7 +527,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'Merlo bold';
+  font-family: 'Source Sans Pro';
   src: url('../fonts/merlo-bold.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
