--- a/css/z_custom.css
+++ b/css/z_custom.css
@@ -13,6 +13,18 @@
 .fb_iframe_widget_fluid {
     display: block;
 }
+.non-profit-text {
+	font-family: 'Source Sans Pro', sans-serif;
+  color: #fff;
+  font-weight: 400;
+  text-align: center;
+  padding-top: 30px;
+}
+.non-profit-div {
+	width: 400px;
+	margin-left: auto;
+	margin-right: auto;
+}
 @media (max-width: 479px) {
 	.fb-share-button {
 		transform: scale(1);
@@ -37,5 +49,11 @@
 	}
 	.h2-txt.h2-center {
 		font-size: 24px;
+	}
+	.non-profit-text {
+	  padding-top: 0px;
+	}
+	.non-profit-div {
+		width: auto;
 	}
 }
